gccida/c1/eliminate_regs_in_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3399:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3399:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3405:4: error: expected ';' after expression
rtx v28; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3405:5: error: use of undeclared identifier 'v28'
rtx v28; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3407:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3407:5: error: use of undeclared identifier 'v30'
rtx v30; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3412:4: error: expected ';' after expression
rtx v35; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3412:5: error: use of undeclared identifier 'v35'
rtx v35; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3418:4: error: expected ';' after expression
rtx v41; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3418:5: error: use of undeclared identifier 'v41'
rtx v41; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3435:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3435:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3437:4: error: expected ';' after expression
rtx v60; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3437:5: error: use of undeclared identifier 'v60'
rtx v60; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3441:4: error: expected ';' after expression
rtx v64; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3441:5: error: use of undeclared identifier 'v64'
rtx v64; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3447:4: error: expected ';' after expression
rtx v70; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3447:5: error: use of undeclared identifier 'v70'
rtx v70; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/reload1.c:3448:6: error: use of undeclared identifier 'fld'
rtx *fld; // r14 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs_in_insn/src/obj/reload1.o] Error 1
